y.output
Grammar

    0 $accept: pgm $end

    1 pgm: program

    2 program: decl

    3 decl: %empty
    4     | decl varDecl
    5     | decl funcDecl
    6     | decl interfaceDecl
    7     | decl classDecl

    8 varDecl: variable ';'

    9 variable: type identifier

   10 type: usertype
   11     | primtype
   12     | arraytype

   13 usertype: typeidentifier

   14 primtype: string
   15         | int
   16         | double
   17         | bool

   18 arraytype: usertype array
   19          | primtype array

   20 $@1: %empty

   21 $@2: %empty

   22 funcDecl: type identifier $@1 '(' formals ')' $@2 stmtblock

   23 $@3: %empty

   24 $@4: %empty

   25 funcDecl: void identifier $@3 '(' formals ')' $@4 stmtblock

   26 formals: %empty
   27        | formals variable
   28        | formals ',' variable

   29 $@5: %empty

   30 classDecl: class identifier $@5 '{' fields '}'

   31 $@6: %empty

   32 classDecl: class typeidentifier ext $@6 '{' fields '}'

   33 $@7: %empty

   34 $@8: %empty

   35 classDecl: class typeidentifier $@7 implements identifiersPlus $@8 '{' fields '}'

   36 $@9: %empty

   37 $@10: %empty

   38 classDecl: class typeidentifier ext $@9 implements identifiersPlus $@10 '{' fields '}'

   39 fields: %empty
   40       | fields funcDecl
   41       | fields varDecl

   42 identifiersPlus: identifier
   43                | identifiersPlus ',' identifier

   44 ext: extends identifier
   45    | extends typeidentifier

   46 $@11: %empty

   47 interfaceDecl: interface identifier $@11 '{' prototypes '}'

   48 prototypes: %empty
   49           | prototypes prototype

   50 $@12: %empty

   51 prototype: type identifier $@12 '(' formals ')' ';'

   52 $@13: %empty

   53 prototype: void identifier $@13 '(' formals ')' ';'

   54 stmtblock: '{' varDeclStar stmtStar '}'

   55 varDeclStar: %empty
   56            | varDeclStar varDecl

   57 stmtStar: %empty
   58         | stmtStar stmt

   59 stmt: matched_stmt
   60     | unmatched_stmt

   61 matched_stmt: ';'
   62             | expr ';'
   63             | matched_if
   64             | matched_while
   65             | matched_for
   66             | break_stmt ';'
   67             | return_stmt ';'
   68             | print_stmt ';'
   69             | stmtblock

   70 unmatched_stmt: unmatched_if
   71               | unmatched_while
   72               | unmatched_for

   73 break_stmt: break

   74 return_stmt: return
   75            | return expr

   76 print_stmt: print '(' actuals ')'

   77 common_if: if '(' expr ')'

   78 matched_if: common_if matched_stmt else matched_stmt

   79 unmatched_if: common_if matched_stmt
   80             | common_if matched_stmt else unmatched_stmt
   81             | common_if unmatched_stmt

   82 common_while: while '(' expr1 ')'

   83 matched_while: common_while matched_stmt

   84 unmatched_while: common_while unmatched_stmt

   85 common_for: for '(' expr ';' expr ';' expr ')'
   86           | for '(' ';' expr ';' expr ')'
   87           | for '(' expr ';' expr ';' ')'
   88           | for '(' ';' expr ';' ')'

   89 matched_for: common_for matched_stmt

   90 unmatched_for: common_for unmatched_stmt

   91 expr: expr1
   92     | Lvalue sceq expr1

   93 expr1: expr2
   94      | expr1 or expr2

   95 expr2: expr3
   96      | expr2 and expr3

   97 expr3: expr4
   98      | expr4 eq expr4
   99      | expr4 neq expr4

  100 expr4: expr5
  101      | expr5 sclt expr5
  102      | expr5 scgt expr5
  103      | expr5 le expr5
  104      | expr5 ge expr5

  105 expr5: expr6
  106      | expr5 scplus expr6
  107      | expr5 scminus expr6

  108 expr6: expr7
  109      | expr6 sctimes expr7
  110      | expr6 scdiv expr7
  111      | expr6 scmod expr7

  112 expr7: expr8
  113      | scneq expr7
  114      | scminus expr7

  115 expr8: expr9
  116      | Lvalue

  117 expr9: constant
  118      | this
  119      | '(' expr ')'
  120      | call
  121      | readint '(' ')'
  122      | readline '(' ')'
  123      | new '(' identifier ')'
  124      | newarray '(' expr ',' type ')'
  125      | newarray '(' expr ',' special ')'

  126 Lvalue: identifier
  127       | expr8 '[' expr1 ']'
  128       | expr8 '.' identifier

  129 call: expr8 '(' nactuals ')'

  130 special: identifier

  131 nactuals: %empty
  132         | actuals

  133 actuals: expr
  134        | actuals ',' expr

  135 constant: intlit
  136         | dbllit
  137         | boollit
  138         | stringlit
  139         | null

  140 typeidentifier: T_TYPEIDENTIFIER

  141 identifier: T_IDENTIFIER

  142 string: "string"

  143 int: "int"

  144 double: "double"

  145 bool: "bool"

  146 array: "[]"

  147 void: "void"

  148 break: "break"

  149 this: "this"

  150 le: "<="

  151 ge: ">="

  152 eq: "=="

  153 neq: "!="

  154 and: "&&"

  155 or: "||"

  156 readint: "ReadInteger"

  157 new: "New"

  158 newarray: "NewArray"

  159 intlit: T_INTLITERAL

  160 dbllit: T_DBLLITERAL

  161 boollit: T_BOOLLITERAL

  162 stringlit: T_STRINGLITERAL

  163 null: "null"

  164 readline: "ReadLine"

  165 if: "if"

  166 else: "else"

  167 print: "Print"

  168 return: "return"

  169 class: "class"

  170 extends: "extends"

  171 implements: "implements"

  172 for: "for"

  173 while: "while"

  174 interface: "interface"

  175 scplus: '+'

  176 scminus: '-'

  177 sctimes: '*'

  178 scdiv: '/'

  179 scmod: '%'

  180 sclt: '<'

  181 scgt: '>'

  182 sceq: '='

  183 scneq: '!'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 183
    '%' (37) 179
    '(' (40) 22 25 51 53 76 77 82 85 86 87 88 119 121 122 123 124 125 129
    ')' (41) 22 25 51 53 76 77 82 85 86 87 88 119 121 122 123 124 125 129
    '*' (42) 177
    '+' (43) 175
    ',' (44) 28 43 124 125 134
    '-' (45) 176
    '.' (46) 128
    '/' (47) 178
    ';' (59) 8 51 53 61 62 66 67 68 85 86 87 88
    '<' (60) 180
    '=' (61) 182
    '>' (62) 181
    '[' (91) 127
    ']' (93) 127
    '{' (123) 30 32 35 38 47 54
    '}' (125) 30 32 35 38 47 54
    error (256)
    "void" (260) 147
    "int" (261) 143
    "double" (262) 144
    "bool" (263) 145
    "string" (264) 142
    "class" (265) 169
    "interface" (266) 174
    "null" (267) 163
    "this" (268) 149
    "extends" (269) 170
    "implements" (270) 171
    "for" (271) 172
    "while" (272) 173
    "if" (273) 165
    "else" (274) 166
    "return" (275) 168
    "break" (276) 148
    "New" (277) 157
    "NewArray" (278) 158
    "Print" (279) 167
    "ReadInteger" (280) 156
    "ReadLine" (281) 164
    "<=" (282) 150
    ">=" (283) 151
    "==" (284) 152
    "!=" (285) 153
    "&&" (286) 154
    "||" (287) 155
    "[]" (288) 146
    T_DBLLITERAL (289) 160
    T_INTLITERAL (290) 159
    T_BOOLLITERAL (291) 161
    T_IDENTIFIER (292) 141
    T_TYPEIDENTIFIER (293) 140
    T_STRINGLITERAL (294) 162


Nonterminals, with rules where they appear

    $accept (56)
        on left: 0
    pgm (57)
        on left: 1
        on right: 0
    program (58)
        on left: 2
        on right: 1
    decl (59)
        on left: 3 4 5 6 7
        on right: 2 4 5 6 7
    varDecl (60)
        on left: 8
        on right: 4 41 56
    variable (61)
        on left: 9
        on right: 8 27 28
    type (62)
        on left: 10 11 12
        on right: 9 22 51 124
    usertype (63)
        on left: 13
        on right: 10 18
    primtype (64)
        on left: 14 15 16 17
        on right: 11 19
    arraytype (65)
        on left: 18 19
        on right: 12
    funcDecl (66)
        on left: 22 25
        on right: 5 40
    $@1 (67)
        on left: 20
        on right: 22
    $@2 (68)
        on left: 21
        on right: 22
    $@3 (69)
        on left: 23
        on right: 25
    $@4 (70)
        on left: 24
        on right: 25
    formals (71)
        on left: 26 27 28
        on right: 22 25 27 28 51 53
    classDecl (72)
        on left: 30 32 35 38
        on right: 7
    $@5 (73)
        on left: 29
        on right: 30
    $@6 (74)
        on left: 31
        on right: 32
    $@7 (75)
        on left: 33
        on right: 35
    $@8 (76)
        on left: 34
        on right: 35
    $@9 (77)
        on left: 36
        on right: 38
    $@10 (78)
        on left: 37
        on right: 38
    fields (79)
        on left: 39 40 41
        on right: 30 32 35 38 40 41
    identifiersPlus (80)
        on left: 42 43
        on right: 35 38 43
    ext (81)
        on left: 44 45
        on right: 32 38
    interfaceDecl (82)
        on left: 47
        on right: 6
    $@11 (83)
        on left: 46
        on right: 47
    prototypes (84)
        on left: 48 49
        on right: 47 49
    prototype (85)
        on left: 51 53
        on right: 49
    $@12 (86)
        on left: 50
        on right: 51
    $@13 (87)
        on left: 52
        on right: 53
    stmtblock (88)
        on left: 54
        on right: 22 25 69
    varDeclStar (89)
        on left: 55 56
        on right: 54 56
    stmtStar (90)
        on left: 57 58
        on right: 54 58
    stmt (91)
        on left: 59 60
        on right: 58
    matched_stmt (92)
        on left: 61 62 63 64 65 66 67 68 69
        on right: 59 78 79 80 83 89
    unmatched_stmt (93)
        on left: 70 71 72
        on right: 60 80 81 84 90
    break_stmt (94)
        on left: 73
        on right: 66
    return_stmt (95)
        on left: 74 75
        on right: 67
    print_stmt (96)
        on left: 76
        on right: 68
    common_if (97)
        on left: 77
        on right: 78 79 80 81
    matched_if (98)
        on left: 78
        on right: 63
    unmatched_if (99)
        on left: 79 80 81
        on right: 70
    common_while (100)
        on left: 82
        on right: 83 84
    matched_while (101)
        on left: 83
        on right: 64
    unmatched_while (102)
        on left: 84
        on right: 71
    common_for (103)
        on left: 85 86 87 88
        on right: 89 90
    matched_for (104)
        on left: 89
        on right: 65
    unmatched_for (105)
        on left: 90
        on right: 72
    expr (106)
        on left: 91 92
        on right: 62 75 77 85 86 87 88 119 124 125 133 134
    expr1 (107)
        on left: 93 94
        on right: 82 91 92 94 127
    expr2 (108)
        on left: 95 96
        on right: 93 94 96
    expr3 (109)
        on left: 97 98 99
        on right: 95 96
    expr4 (110)
        on left: 100 101 102 103 104
        on right: 97 98 99
    expr5 (111)
        on left: 105 106 107
        on right: 100 101 102 103 104 106 107
    expr6 (112)
        on left: 108 109 110 111
        on right: 105 106 107 109 110 111
    expr7 (113)
        on left: 112 113 114
        on right: 108 109 110 111 113 114
    expr8 (114)
        on left: 115 116
        on right: 112 127 128 129
    expr9 (115)
        on left: 117 118 119 120 121 122 123 124 125
        on right: 115
    Lvalue (116)
        on left: 126 127 128
        on right: 92 116
    call (117)
        on left: 129
        on right: 120
    special (118)
        on left: 130
        on right: 125
    nactuals (119)
        on left: 131 132
        on right: 129
    actuals (120)
        on left: 133 134
        on right: 76 132 134
    constant (121)
        on left: 135 136 137 138 139
        on right: 117
    typeidentifier (122)
        on left: 140
        on right: 13 32 35 38 45
    identifier (123)
        on left: 141
        on right: 9 22 25 30 42 43 44 47 51 53 123 126 128 130
    string (124)
        on left: 142
        on right: 14
    int (125)
        on left: 143
        on right: 15
    double (126)
        on left: 144
        on right: 16
    bool (127)
        on left: 145
        on right: 17
    array (128)
        on left: 146
        on right: 18 19
    void (129)
        on left: 147
        on right: 25 53
    break (130)
        on left: 148
        on right: 73
    this (131)
        on left: 149
        on right: 118
    le (132)
        on left: 150
        on right: 103
    ge (133)
        on left: 151
        on right: 104
    eq (134)
        on left: 152
        on right: 98
    neq (135)
        on left: 153
        on right: 99
    and (136)
        on left: 154
        on right: 96
    or (137)
        on left: 155
        on right: 94
    readint (138)
        on left: 156
        on right: 121
    new (139)
        on left: 157
        on right: 123
    newarray (140)
        on left: 158
        on right: 124 125
    intlit (141)
        on left: 159
        on right: 135
    dbllit (142)
        on left: 160
        on right: 136
    boollit (143)
        on left: 161
        on right: 137
    stringlit (144)
        on left: 162
        on right: 138
    null (145)
        on left: 163
        on right: 139
    readline (146)
        on left: 164
        on right: 122
    if (147)
        on left: 165
        on right: 77
    else (148)
        on left: 166
        on right: 78 80
    print (149)
        on left: 167
        on right: 76
    return (150)
        on left: 168
        on right: 74 75
    class (151)
        on left: 169
        on right: 30 32 35 38
    extends (152)
        on left: 170
        on right: 44 45
    implements (153)
        on left: 171
        on right: 35 38
    for (154)
        on left: 172
        on right: 85 86 87 88
    while (155)
        on left: 173
        on right: 82
    interface (156)
        on left: 174
        on right: 47
    scplus (157)
        on left: 175
        on right: 106
    scminus (158)
        on left: 176
        on right: 107 114
    sctimes (159)
        on left: 177
        on right: 109
    scdiv (160)
        on left: 178
        on right: 110
    scmod (161)
        on left: 179
        on right: 111
    sclt (162)
        on left: 180
        on right: 101
    scgt (163)
        on left: 181
        on right: 102
    sceq (164)
        on left: 182
        on right: 92
    scneq (165)
        on left: 183
        on right: 113


State 0

    0 $accept: • pgm $end

    $default  reduce using rule 3 (decl)

    pgm      go to state 1
    program  go to state 2
    decl     go to state 3


State 1

    0 $accept: pgm • $end

    $end  shift, and go to state 4


State 2

    1 pgm: program •

    $default  reduce using rule 1 (pgm)


State 3

    2 program: decl •
    4 decl: decl • varDecl
    5     | decl • funcDecl
    6     | decl • interfaceDecl
    7     | decl • classDecl

    "void"            shift, and go to state 5
    "int"             shift, and go to state 6
    "double"          shift, and go to state 7
    "bool"            shift, and go to state 8
    "string"          shift, and go to state 9
    "class"           shift, and go to state 10
    "interface"       shift, and go to state 11
    T_TYPEIDENTIFIER  shift, and go to state 12

    $default  reduce using rule 2 (program)

    varDecl         go to state 13
    variable        go to state 14
    type            go to state 15
    usertype        go to state 16
    primtype        go to state 17
    arraytype       go to state 18
    funcDecl        go to state 19
    classDecl       go to state 20
    interfaceDecl   go to state 21
    typeidentifier  go to state 22
    string          go to state 23
    int             go to state 24
    double          go to state 25
    bool            go to state 26
    void            go to state 27
    class           go to state 28
    interface       go to state 29


State 4

    0 $accept: pgm $end •

    $default  accept


State 5

  147 void: "void" •

    $default  reduce using rule 147 (void)


State 6

  143 int: "int" •

    $default  reduce using rule 143 (int)


State 7

  144 double: "double" •

    $default  reduce using rule 144 (double)


State 8

  145 bool: "bool" •

    $default  reduce using rule 145 (bool)


State 9

  142 string: "string" •

    $default  reduce using rule 142 (string)


State 10

  169 class: "class" •

    $default  reduce using rule 169 (class)


State 11

  174 interface: "interface" •

    $default  reduce using rule 174 (interface)


State 12

  140 typeidentifier: T_TYPEIDENTIFIER •

    $default  reduce using rule 140 (typeidentifier)


State 13

    4 decl: decl varDecl •

    $default  reduce using rule 4 (decl)


State 14

    8 varDecl: variable • ';'

    ';'  shift, and go to state 30


State 15

    9 variable: type • identifier
   22 funcDecl: type • identifier $@1 '(' formals ')' $@2 stmtblock

    T_IDENTIFIER  shift, and go to state 31

    identifier  go to state 32


State 16

   10 type: usertype •
   18 arraytype: usertype • array

    "[]"  shift, and go to state 33

    $default  reduce using rule 10 (type)

    array  go to state 34


State 17

   11 type: primtype •
   19 arraytype: primtype • array

    "[]"  shift, and go to state 33

    $default  reduce using rule 11 (type)

    array  go to state 35


State 18

   12 type: arraytype •

    $default  reduce using rule 12 (type)


State 19

    5 decl: decl funcDecl •

    $default  reduce using rule 5 (decl)


State 20

    7 decl: decl classDecl •

    $default  reduce using rule 7 (decl)


State 21

    6 decl: decl interfaceDecl •

    $default  reduce using rule 6 (decl)


State 22

   13 usertype: typeidentifier •

    $default  reduce using rule 13 (usertype)


State 23

   14 primtype: string •

    $default  reduce using rule 14 (primtype)


State 24

   15 primtype: int •

    $default  reduce using rule 15 (primtype)


State 25

   16 primtype: double •

    $default  reduce using rule 16 (primtype)


State 26

   17 primtype: bool •

    $default  reduce using rule 17 (primtype)


State 27

   25 funcDecl: void • identifier $@3 '(' formals ')' $@4 stmtblock

    T_IDENTIFIER  shift, and go to state 31

    identifier  go to state 36


State 28

   30 classDecl: class • identifier $@5 '{' fields '}'
   32          | class • typeidentifier ext $@6 '{' fields '}'
   35          | class • typeidentifier $@7 implements identifiersPlus $@8 '{' fields '}'
   38          | class • typeidentifier ext $@9 implements identifiersPlus $@10 '{' fields '}'

    T_IDENTIFIER      shift, and go to state 31
    T_TYPEIDENTIFIER  shift, and go to state 12

    typeidentifier  go to state 37
    identifier      go to state 38


State 29

   47 interfaceDecl: interface • identifier $@11 '{' prototypes '}'

    T_IDENTIFIER  shift, and go to state 31

    identifier  go to state 39


State 30

    8 varDecl: variable ';' •

    $default  reduce using rule 8 (varDecl)


State 31

  141 identifier: T_IDENTIFIER •

    $default  reduce using rule 141 (identifier)


State 32

    9 variable: type identifier •
   22 funcDecl: type identifier • $@1 '(' formals ')' $@2 stmtblock

    '('       reduce using rule 20 ($@1)
    $default  reduce using rule 9 (variable)

    $@1  go to state 40


State 33

  146 array: "[]" •

    $default  reduce using rule 146 (array)


State 34

   18 arraytype: usertype array •

    $default  reduce using rule 18 (arraytype)


State 35

   19 arraytype: primtype array •

    $default  reduce using rule 19 (arraytype)


State 36

   25 funcDecl: void identifier • $@3 '(' formals ')' $@4 stmtblock

    $default  reduce using rule 23 ($@3)

    $@3  go to state 41


State 37

   32 classDecl: class typeidentifier • ext $@6 '{' fields '}'
   35          | class typeidentifier • $@7 implements identifiersPlus $@8 '{' fields '}'
   38          | class typeidentifier • ext $@9 implements identifiersPlus $@10 '{' fields '}'

    "extends"  shift, and go to state 42

    $default  reduce using rule 33 ($@7)
